@@ -15,14 +15,11 @@
 
 #include /**/ "ace/pre.h"
 
+#include "tao/orbconf.h"
+
 #if !defined ACE_LACKS_PRAGMA_ONCE
 #pragma once
 #endif /* ! ACE_LACKS_PRAGMA_ONCE */
-
-#include "ace/Hash_Map_Manager_T.h"
-#include "tao/orbconf.h"
-#include "tao/AnyTypeCode/Any.h"
-#include "ccm/CCM_StandardConfiguratorC.h"
 
 #include "ciao/Base/CIAO_Base_stub_export.h"
 
@@ -44,21 +41,6 @@ namespace CIAO
    * to register these stuff automatically.
    */
   CIAO_BASE_STUB_Export int Client_init (CORBA::ORB_ptr o);
-
-  namespace Utility
-  {
-    typedef ACE_Hash_Map_Manager_Ex<ACE_CString,
-                                    CORBA::Any,
-                                    ACE_Hash<ACE_CString>,
-                                    ACE_Equal_To<ACE_CString>,
-                                    ACE_Null_Mutex> CONFIGVALUE_MAP;
-
-    CIAO_BASE_STUB_Export void build_config_values_map (CONFIGVALUE_MAP &map,
-                                                     const ::Components::ConfigValues &config);
-
-    CIAO_BASE_STUB_Export void build_config_values_sequence (::Components::ConfigValues &config,
-                                                          const CONFIGVALUE_MAP &map);
-  }
 }
 
 #define CIAO_REGISTER_VALUE_FACTORY(ORB,FACTORY,VALUETYPE)       {\
